<resources>
    <string name="app_name">Kabarak University</string>
    <string name="netwatch_target_ping_server_ip_add">8.8.8.8</string>
    <string name="netwatch_lost_connection">No internet connection</string>
    <string name="status">Proud to be part of Kabarak Community</string>
    <string name="document">Document</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="audio">Audio</string>
    <string name="contact">Contact</string>
    
    <string name="server_key">AAAAhHojKeQ:APA91bHZR9Dpkbdy6d2DfSKFxfo-mFKlU7VSM9_vxHUpZEunDHrK2rvLNSP5HP8bmw0FL1DprQ4izQBsdnvY4_9QjaQXlqmyTgd3omWk9ADyhiDn9Z0rxRTsr4GKVQyA-qHHAQktNEN5</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
