<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:id="@+id/linear_layout_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="215dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            
            <androidx.cardview.widget.CardView
                android:id="@+id/attach_document"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:clickable="true"
                android:orientation="vertical">
                
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image_view_document"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_document"
                        android:layout_centerInParent="true"/>
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/document"
                        android:textSize="18dp"
                        android:layout_below="@id/image_view_document"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/Black"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                    
                    </TextView>
                
                </RelativeLayout>
            
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/camera"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:layout_gravity="center"
                android:orientation="vertical">
                
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image_view_camera"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_photo"
                        android:layout_centerInParent="true"/>
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/camera"
                        android:textSize="18dp"
                        android:layout_below="@id/image_view_camera"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/Black"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                    
                    </TextView>
                
                </RelativeLayout>
                
            
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/gallery"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:layout_gravity="center"
                android:orientation="vertical">
        
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
            
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image_view_gallery"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_gallery"
                        android:layout_centerInParent="true"/>
            
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gallery"
                        android:textSize="18dp"
                        android:layout_below="@id/image_view_gallery"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/Black"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
            
                    </TextView>
        
                </RelativeLayout>
    
    
            </androidx.cardview.widget.CardView>
        
        </LinearLayout>
    
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linear_layout_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            
            <androidx.cardview.widget.CardView
                android:id="@+id/attach_audio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:clickable="true"
                android:orientation="vertical">
                
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image_view_audio"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_audio"
                        android:layout_centerInParent="true"/>
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/audio"
                        android:textSize="18dp"
                        android:layout_below="@id/image_view_audio"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/Black"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                    
                    </TextView>
                
                </RelativeLayout>
            
            </androidx.cardview.widget.CardView>
            
            <androidx.cardview.widget.CardView
                android:id="@+id/attach_contact"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:layout_gravity="center"
                android:orientation="vertical">
                
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image_view_contact"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_contact"
                        android:layout_centerInParent="true"/>
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact"
                        android:textSize="18dp"
                        android:layout_below="@id/image_view_contact"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/Black"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                    
                    </TextView>
                
                </RelativeLayout>
            
            
            </androidx.cardview.widget.CardView>
        
        </LinearLayout>
    
    
    </LinearLayout>
    

</LinearLayout>